--- a/sass/style.scss
+++ b/sass/style.scss
@@ -25,19 +25,18 @@
     font-size: 43px;
     font-style: normal;
     font-weight: 500;
-    line-height: 140%;
     text-align: center;
     /* 60.2px */
 }
 
 %p_things {
+    max-width: 735px;
     color: #000;
     text-align: center;
     font-family: Roboto;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
-    line-height: 160%;
     margin: 20px 0px;
     /* 28.8px */
 }
@@ -45,10 +44,11 @@
 nav {
     padding: 12px;
     width: 100%;
-    position: fixed;
+    background-color: #000;
 }
 
-nav .bars{
+nav .bar {
+    text-align: right;
     display: none;
 }
 
@@ -76,65 +76,71 @@ nav button {
     margin-left: auto;
 }
 
-#main1 .parent {
-    width: 100%;
-    background-color: rgba($color: #000000, $alpha: 0.3);
-    height: 100%;
-    @extend %center_things;
-    justify-content: space-evenly;
 
+#main1 .container {
+    background-image: url("../images/main_bg1x.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: right;
+    min-height: 100vh;
+    padding: 20px 200px;
+    color: white;
+
+    .header {
+        @extend %center_things;
+        justify-content: space-between;
+
+        ul {
+            display: flex;
+            list-style: none;
+            gap: 30px;
+        }
+
+        button {
+            @extend %button_things;
+        }
+    }
+
+    .header_subtitle {
+        margin-top: 13%;
+
+        .header_h1 {
+            max-width: 804px;
+            font-size: 48px;
+            font-weight: 700;
+            line-height: 78px;
+        }
+
+        .header_p {
+            max-width: 458px;
+            opacity: 0.6;
+            margin: 20px 0px;
+        }
+
+        button {
+            @extend %button_things;
+        }
+    }
 }
 
-#main1 span {
-    width: 1174px;
-    margin: auto;
-}
-
-#main1 .child {
-    width: 700px
-}
-
-#main1 h1 {
-    color: #FFF;
-    font-family: Gelasio;
-    font-size: 65px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 120%;
-}
-
-#main1 p {
-    color: #FFF;
-    font-family: Roboto;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 160%;
-    padding: 20px 0px;
-    /* 28.8px */
-}
-
-#main1 button {
-    @extend %button_things;
-}
 
 
 
 #main2 .container {
     text-align: center;
-    height: 100vh;
     margin: 10% 0px;
 }
 
 #main2 .parent {
     @extend %center_things;
     gap: 30px;
-    width: 1174px;
+    width: 90%;
     margin: auto;
+    flex-wrap: wrap;
 }
 
 #main2 .child {
-    width: calc(100% / 3);
+    width: 360px;
     border: 1px solid rgb(228, 224, 224);
     border-radius: 10px;
     box-shadow: 0px 6px 35px 0px rgba(0, 0, 0, 0.08);
@@ -168,10 +174,11 @@ nav button {
     @extend %center_things;
     gap: 20px;
     width: 100%;
+    flex-wrap: wrap;
 }
 
 #main3 .child {
-    width: calc(100% / 5);
+    width: 250px;
 }
 
 #main3 img {
@@ -184,7 +191,6 @@ nav button {
     font-size: 24px;
     font-style: normal;
     font-weight: 550;
-    line-height: 150%;
     /* 36px */
 }
 
@@ -193,7 +199,6 @@ nav button {
     font-family: Roboto;
     font-size: 20px;
     font-weight: 300;
-    line-height: 150%;
     text-align: left;
     margin: 0;
     /* 30px */
@@ -228,12 +233,13 @@ nav button {
 #main4 .wrapper {
     @extend %center_things;
     align-items: start;
-    width: 1174px;
+    flex-wrap: wrap;
+    width: 90%;
     margin: auto;
 }
 
 #main4 .parent {
-    width: calc(100% / 2);
+    width: 600px;
 }
 
 #main4 .child {
@@ -279,15 +285,16 @@ nav button {
 }
 
 #main4 .p_2 .child {
-    @extend %center_things
+    @extend %center_things;
+    flex-wrap: wrap;
+    margin: 5px auto;
 }
 
-
-
-footer{
+footer {
     background-color: #2694990A;
     padding: 30px 0px;
 }
+
 footer h1 {
     color: #000;
     font-family: Ribeye;
@@ -301,29 +308,35 @@ footer h1 {
 }
 
 footer .parent {
-    width: 1174px;
+    width: 90%;
+    flex-wrap: wrap;
     margin: auto;
+    gap: 20px;
     @extend %center_things;
 }
 
 footer .child {
-    width: calc(100% / 4);
+    width: 200px;
     margin: auto;
-    height: 100px;
+    height: 200px;
 }
 
 footer ul {
     list-style: none;
     line-height: 2em;
 }
-footer span{
+
+footer span {
     display: flex;
     gap: 20px;
+    flex-wrap: wrap;
 }
-footer input{
-    padding: 10px 20px;
+
+footer input {
+    padding: 10px 6%;
 }
-footer button{
+
+footer button {
     @extend %button_things;
 }
 
@@ -331,16 +344,58 @@ footer button{
 
 
 
-@media (min-width: 448px) and (max-width: 769px){
-    nav{
-        width: 100%;
-    }
-    nav ul,
-    nav button{
-       display: none;
-    }
 
-    nav .bars{
-        display: block;
+
+@media (min-width: 990px) and (max-width: 1200px) {
+    #main1 .container {
+        padding: 20px 50px;
+    }
+}
+
+@media (min-width: 770px) and (max-width: 989px) {
+    #main1 .container {
+        padding: 20px 30px;
+
+        .header_subtitle {
+            .header_h1 {
+                font-size: 30px;
+                line-height: 50px;
+            }
+        }
+    }
+}
+@media (min-width: 447px) and (max-width: 769px){
+    #main1 .container {
+        padding: 20px 30px;
+        .header{
+            ul{
+            display: none;
+            }
+        }
+        .header_subtitle {
+            .header_h1 {
+                font-size: 30px;
+                line-height: 50px;
+            }
+        }
+    }
+}
+@media (max-width: 446px){
+    #main1 .container {
+        padding: 20px 30px;
+        .header{
+            ul{
+            display: none;
+            }
+            button{
+                display: none;
+            }
+        }
+        .header_subtitle {
+            .header_h1 {
+                font-size: 30px;
+                line-height: 50px;
+            }
+        }
     }
 }
