--- a/sass/style.css
+++ b/sass/style.css
@@ -298,6 +298,9 @@ footer input {
   #main1 .container .header ul {
     display: none;
   }
+  #main1 .container .header_subtitle {
+    margin-top: 20%;
+  }
   #main1 .container .header_subtitle .header_h1 {
     font-size: 30px;
     line-height: 50px;
@@ -314,7 +317,7 @@ footer input {
     display: none;
   }
   #main1 .container .header_subtitle {
-    margin-top: 20%;
+    margin-top: 30%;
   }
   #main1 .container .header_subtitle .header_h1 {
     font-size: 30px;
