--- a/sass/style.scss
+++ b/sass/style.scss
@@ -360,6 +360,9 @@ footer button {
                 font-size: 30px;
                 line-height: 50px;
             }
+            .header_p{
+                margin: 30px 0px;
+            }
         }
     }
 }
@@ -376,6 +379,9 @@ footer button {
             .header_h1 {
                 font-size: 30px;
                 line-height: 50px;
+            }
+            .header_p{
+                margin: 30px 0px;
             }
         }
     }
@@ -396,6 +402,9 @@ footer button {
             .header_h1 {
                 font-size: 30px;
                 line-height: 50px;
+            }
+            .header_p{
+                margin: 30px 0px;
             }
         }
     }
